fix: hide table separator on mobile

--- a/style.css
+++ b/style.css
@@ -1432,6 +1432,10 @@ p {
         font-weight: 600;
         margin-right: 10px;
     }
+
+    .table-separator {
+        display: none;
+    }
     
     .rankings-footer {
         flex-direction: column;
